add email configurations in the .env and settings files

--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@ DB_HOST='127.0.0.1'
 CLOUD_NAME='dz275mqsc'
 API_KEY='883538243664336'
 API_SECRET='kqfJDF9jde3JHj9ezi6TNz8s-HM'
+
+EMAIL_USE_TLS = True
+EMAIL_HOST = 'smtp.gmail.com'
+EMAIL_PORT = 587
+EMAIL_HOST_USER = 'codesrunner@gmail.com'
+EMAIL_HOST_PASSWORD = 'gvtvencvipdgldcn'
