--- a/.env
+++ b/.env
@@ -7,6 +7,9 @@ CLOUD_NAME='dz275mqsc'
 API_KEY='883538243664336'
 API_SECRET='kqfJDF9jde3JHj9ezi6TNz8s-HM'
 
+
+EMAIL_FROM_USER=''
+EMAIL_BACKEND=''
 EMAIL_USE_TLS = True
 EMAIL_HOST = 'smtp.gmail.com'
 EMAIL_PORT = 587
