deleting the and redoing the authentication

--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ API_KEY='883538243664336'
 API_SECRET='kqfJDF9jde3JHj9ezi6TNz8s-HM'
 
 
-# EMAIL_FROM_USER=''
-# EMAIL_BACKEND=''
+# EMAIL_FROM_USER='codetester750@gmail.com'
+# EMAIL_BACKEND='django.core.mail.backends.smtp.EmailBackend'
 EMAIL_USE_TLS = True
 EMAIL_HOST = 'smtp.gmail.com'
 EMAIL_PORT = 587
